--- a/src/pages/testing/vehicle/vehicle-weights/vehicle-weights.html
+++ b/src/pages/testing/vehicle/vehicle-weights/vehicle-weights.html
@@ -6,7 +6,7 @@
     </ion-navbar>
 
     <ion-toolbar  color="tertiary" *ngIf="vehicleData.techRecord.statusCode===TECH_RECORD_STATUS.PROVISIONAL" >
-        <ion-title padding-left>This is a provisional record.</ion-title>
+        <ion-title padding-left>{{ APP_STRINGS.PROVISIONAL_LABEL_TEXT }}</ion-title>
     </ion-toolbar>
 
 </ion-header>
