--- a/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.html
+++ b/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{sectionName}}</ion-title>
+    <ion-title padding-right>{{sectionName}}</ion-title>
     <ion-buttons>
       <button ion-button
               class="cancel"
@@ -21,16 +21,38 @@
 
 
 <ion-content class="content-background-color-grey">
-  <ion-item-group>
-    <ion-item-divider padding-left>{{input.label.toUpperCase()}}</ion-item-divider>
+  <ion-item-group *ngIf="input.testTypePropertyName !== testTypesInputs.K_LIMIT">
+    <ion-item-divider padding-left>
+      <span
+        *ngIf="input.testTypePropertyName === testTypesInputs.SIC_SEATBELTS_NUMBER">{{input.label.toUpperCase()}}</span>
+    </ion-item-divider>
     <ion-item padding-left
               [ngClass]="{'error-incomplete-item': errorIncomplete && !inputValue}">
-      <ion-input [type]="input.type"
-                 [pattern]="input.type === testTypeFields.NUMBER ? patterns.NUMERIC : ''"
+      <ion-input [type]="input.testTypePropertyName === testTypesInputs.SIC_SEATBELTS_NUMBER ? input.type : 'text'"
+                 [pattern]="input.testTypePropertyName === testTypesInputs.SIC_SEATBELTS_NUMBER ? patterns.NUMERIC : ''"
+                 [placeholder]="input.defaultValue"
                  [(ngModel)]="inputValue"
                  (ngModelChange)="valueInputChange($event)"
                  #valueInput></ion-input>
     </ion-item>
+  </ion-item-group>
+  <ion-item-group *ngIf="input.testTypePropertyName === testTypesInputs.K_LIMIT">
+    <ion-item-divider></ion-item-divider>
+    <ion-row class="k-limit-custom">
+      <ion-col col-10>
+        <ion-item padding-left
+                  [ngClass]="{'error-incomplete-item': errorIncomplete && !inputValue}">
+          <ion-input type="text"
+                     [placeholder]="input.defaultValue"
+                     [(ngModel)]="inputValue"
+                     (ngModelChange)="valueInputChange($event)"
+                     #customValueInput></ion-input>
+        </ion-item>
+      </ion-col>
+      <ion-col col-2>
+        (m<sup>-1</sup>)
+      </ion-col>
+    </ion-row>
   </ion-item-group>
   <p class="color-grey-1" padding-left>{{input.info}}</p>
 </ion-content>
