--- a/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
+++ b/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
@@ -1,202 +1,211 @@
 <ion-header>
-    <ion-navbar>
-        <ion-title margin-left>
-            <ng-container>
+  <ion-navbar>
+    <ion-title margin-left>
+      <ng-container>
                 <span *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType, 'trl');
                             else showVehicleDetailsTitle">
                     Trailer details
                 </span>
-                <ng-template #showVehicleDetailsTitle>
-                    Vehicle details
-                </ng-template>
-            </ng-container>
-        </ion-title>
-        <ion-buttons end *ngIf="testData && !fromTestCreatePage">
-            <button ion-button 
-                    (click)="goToPreparerPage()"
-                    [ngClass]="{buttonOpacity: changeOpacity}">
-                Confirm
-            </button>
-        </ion-buttons>
-    </ion-navbar>
+        <ng-template #showVehicleDetailsTitle>
+          Vehicle details
+        </ng-template>
+      </ng-container>
+    </ion-title>
+    <ion-buttons end *ngIf="testData && !fromTestCreatePage">
+      <button ion-button
+              (click)="goToPreparerPage()"
+              [ngClass]="{buttonOpacity: changeOpacity}">
+        Confirm
+      </button>
+    </ion-buttons>
+  </ion-navbar>
 
-    <ion-toolbar  color="tertiary" *ngIf="vehicleData.techRecord.statusCode===TECH_RECORD_STATUS.PROVISIONAL" >
-        <ion-title padding-left>{{ APP_STRINGS.PROVISIONAL_LABEL_TEXT }}</ion-title>
-    </ion-toolbar>
+  <ion-toolbar color="tertiary" *ngIf="vehicleData.techRecord.statusCode===TECH_RECORD_STATUS.PROVISIONAL">
+    <ion-title padding-left>{{ APP_STRINGS.PROVISIONAL_LABEL_TEXT }}</ion-title>
+  </ion-toolbar>
 
 </ion-header>
 
 <ion-content no-padding>
-    <div text-uppercase
-         text-center
-         class="vehicle-header-vrm-number">
-        <ng-container *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.TRL); else isVehicle">{{ vehicleData.trailerId }}</ng-container>
-        <ng-template #isVehicle>{{ vehicleData.vrm | formatVrm }}</ng-template>
-    </div>
+  <div text-uppercase
+       text-center
+       class="vehicle-header-vrm-number">
+    <ng-container
+      *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.TRL); else isVehicle">{{ vehicleData.trailerId }}</ng-container>
+    <ng-template #isVehicle>{{ vehicleData.vrm | formatVrm }}</ng-template>
+  </div>
 
-    <ion-list class="vehicle-list">
-        <ion-list-header padding-left padding-right>
-            <ng-container>
+  <ion-list class="vehicle-list">
+    <ion-list-header padding-left padding-right>
+      <ng-container>
                 <span *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType, 'trl');
                              else showVehicleSummaryTitle">
                     TRAILER SUMMARY
                 </span>
-                <ng-template #showVehicleSummaryTitle>
-                    VEHICLE SUMMARY
-                </ng-template>
-            </ng-container>
-        </ion-list-header>
-        <ion-item margin-left>
-            <ion-label>
-                <h3>VIN / Chassis number</h3>
-            </ion-label>
-            <div item-content padding-right>
-                <p>{{ vehicleData.vin }}</p>
-            </div>
+        <ng-template #showVehicleSummaryTitle>
+          VEHICLE SUMMARY
+        </ng-template>
+      </ng-container>
+    </ion-list-header>
+    <ion-item margin-left>
+      <ion-label>
+        <h3>VIN / Chassis number</h3>
+      </ion-label>
+      <div item-content padding-right>
+        <p>{{ vehicleData.vin }}</p>
+      </div>
+    </ion-item>
+    <ng-container>
+      <ng-container>
+        <ion-item margin-left *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV)">
+          <ion-label>
+            <h3>Chassis make</h3>
+          </ion-label>
+          <div item-content padding-right>
+            <p>{{ vehicleData.techRecord.chassisMake }}</p>
+          </div>
         </ion-item>
-        <ng-container>
-            <ng-container>
-                <ion-item margin-left *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV)">
-                    <ion-label>
-                        <h3>Chassis make</h3>
-                    </ion-label>
-                    <div item-content padding-right>
-                        <p>{{ vehicleData.techRecord.chassisMake }}</p>
-                    </div>
-                </ion-item>
-                <ion-item margin-left *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV)">
-                    <ion-label>
-                        <h3>Chassis model</h3>
-                    </ion-label>
-                    <div item-content padding-right>
-                        <p>{{ vehicleData.techRecord.chassisModel }}</p>
-                    </div>
-                </ion-item>
-                <ion-item margin-left *ngIf="!commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV)">
-                    <ion-label>
-                        <h3>Make</h3>
-                    </ion-label>
-                    <div item-content padding-right>
-                        <p>{{ vehicleData.techRecord.make }}</p>
-                    </div>
-                </ion-item>
-                <ion-item margin-left *ngIf="!commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV)">
-                    <ion-label>
-                        <h3>Model</h3>
-                    </ion-label>
-                    <div item-content padding-right>
-                        <p>{{ vehicleData.techRecord.model }}</p>
-                    </div>
-                </ion-item>
-                <ion-item margin-left *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV)">
-                    <ion-label>
-                        <h3>Body make</h3>
-                    </ion-label>
-                    <div item-content padding-right>
-                        <p>{{ vehicleData.techRecord.bodyMake }}</p>
-                    </div>
-                </ion-item>
-                <ion-item margin-left *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV)">
-                    <ion-label>
-                        <h3>Body model</h3>
-                    </ion-label>
-                    <div item-content padding-right>
-                        <p>{{ vehicleData.techRecord.bodyModel }}</p>
-                    </div>
-                </ion-item>
-                <ion-item margin-left>
-                    <ion-label>
-                        <h3>Body type</h3>
-                    </ion-label>
-                    <div item-content padding-right>
-                        <p>{{ vehicleData.techRecord.bodyType.description }}</p>
-                    </div>
-                </ion-item>
-                <ion-item margin-left *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.HGV)">
-                    <ion-label>
-                        <h3>Function code</h3>
-                    </ion-label>
-                    <div item-content padding-right>
-                        <p>{{ vehicleData.techRecord.functionCode }}</p>
-                    </div>
-                </ion-item>
-                <ion-item margin-left>
-                    <ion-label>
-                        <h3>Year of manufacture</h3>
-                    </ion-label>
-                    <div item-content padding-right>
-                        <p>{{ vehicleData.techRecord.manufactureYear }}</p>
-                    </div>
-                </ion-item>
-                <ion-item margin-left *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.TRL)">
-                    <ion-label>
-                        <h3>Date of first use</h3>
-                    </ion-label>
-                    <div item-content padding-right>
-                        <p>{{ vehicleData.techRecord.firstUseDate | date: dateFormat }}</p>
-                    </div>
-                </ion-item>
-                <ion-item margin-left *ngIf="!commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.TRL)">
-                    <ion-label>
-                        <h3>Date of first registration</h3>
-                    </ion-label>
-                    <div item-content padding-right>
-                        <p>{{ vehicleData.techRecord.regnDate | date: dateFormat }}</p>
-                    </div>
-                </ion-item>
-                <ion-item margin-left>
-                    <ion-label>
-                        <h3>Axles</h3>
-                    </ion-label>
-                    <div item-content padding-right>
-                        <p>{{ vehicleData.techRecord.noOfAxles }}</p>
-                    </div>
-                </ion-item>
-                <ion-item margin-left>
-                    <ion-label>
-                        <h3>
-                            <ng-container  *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV); else dtp">Brake code</ng-container>
-                            <ng-template #dtp>DTP</ng-template>
-                        </h3>
-                    </ion-label>
-                    <div item-content padding-right>
-                        <p>{{ commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV) ? vehicleData.techRecord.brakeCode : vehicleData.techRecord.brakes.dtpNumber}}</p>
-                    </div>
-                </ion-item>
-            </ng-container>
-        </ng-container>
-    </ion-list>
+        <ion-item margin-left *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV)">
+          <ion-label>
+            <h3>Chassis model</h3>
+          </ion-label>
+          <div item-content padding-right>
+            <p>{{ vehicleData.techRecord.chassisModel }}</p>
+          </div>
+        </ion-item>
+        <ion-item margin-left *ngIf="!commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV)">
+          <ion-label>
+            <h3>Make</h3>
+          </ion-label>
+          <div item-content padding-right>
+            <p>{{ vehicleData.techRecord.make }}</p>
+          </div>
+        </ion-item>
+        <ion-item margin-left *ngIf="!commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV)">
+          <ion-label>
+            <h3>Model</h3>
+          </ion-label>
+          <div item-content padding-right>
+            <p>{{ vehicleData.techRecord.model }}</p>
+          </div>
+        </ion-item>
+        <ion-item margin-left *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV)">
+          <ion-label>
+            <h3>Body make</h3>
+          </ion-label>
+          <div item-content padding-right>
+            <p>{{ vehicleData.techRecord.bodyMake }}</p>
+          </div>
+        </ion-item>
+        <ion-item margin-left *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV)">
+          <ion-label>
+            <h3>Body model</h3>
+          </ion-label>
+          <div item-content padding-right>
+            <p>{{ vehicleData.techRecord.bodyModel }}</p>
+          </div>
+        </ion-item>
+        <ion-item margin-left>
+          <ion-label>
+            <h3>Body type</h3>
+          </ion-label>
+          <div item-content padding-right>
+            <p>{{ vehicleData.techRecord.bodyType.description }}</p>
+          </div>
+        </ion-item>
+        <ion-item margin-left *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.HGV)">
+          <ion-label>
+            <h3>Function code</h3>
+          </ion-label>
+          <div item-content padding-right>
+            <p>{{ vehicleData.techRecord.functionCode }}</p>
+          </div>
+        </ion-item>
+        <ion-item margin-left>
+          <ion-label>
+            <h3>Year of manufacture</h3>
+          </ion-label>
+          <div item-content padding-right>
+            <p>{{ vehicleData.techRecord.manufactureYear }}</p>
+          </div>
+        </ion-item>
+        <ion-item margin-left *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.TRL)">
+          <ion-label>
+            <h3>Date of first use</h3>
+          </ion-label>
+          <div item-content padding-right>
+            <p>{{ vehicleData.techRecord.firstUseDate | date: dateFormat }}</p>
+          </div>
+        </ion-item>
+        <ion-item margin-left *ngIf="!commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.TRL)">
+          <ion-label>
+            <h3>Date of first registration</h3>
+          </ion-label>
+          <div item-content padding-right>
+            <p>{{ vehicleData.techRecord.regnDate | date: dateFormat }}</p>
+          </div>
+        </ion-item>
+        <ion-item margin-left>
+          <ion-label>
+            <h3>Axles</h3>
+          </ion-label>
+          <div item-content padding-right>
+            <p>{{ vehicleData.techRecord.noOfAxles }}</p>
+          </div>
+        </ion-item>
+        <ion-item margin-left>
+          <ion-label>
+            <h3>
+              <ng-container
+                *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV); else dtp">Brake
+                code
+              </ng-container>
+              <ng-template #dtp>DTP</ng-template>
+            </h3>
+          </ion-label>
+          <div item-content padding-right>
+            <p>{{ commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.PSV) ? vehicleData.techRecord.brakeCode : vehicleData.techRecord.brakes.dtpNumber}}</p>
+          </div>
+        </ion-item>
+      </ng-container>
+    </ng-container>
+  </ion-list>
 
-    <ion-list class="vehicle-list">
-        <ion-list-header padding-left padding-right>VIEW MORE INFORMATION</ion-list-header>
-        <button ion-item padding-left (click)="goToVehicleTestResultsHistory()">
-            <ng-container>
-                <h3>
+  <ion-list class="vehicle-list">
+    <ion-list-header padding-left padding-right>VIEW MORE INFORMATION</ion-list-header>
+    <button ion-item padding-left (click)="goToVehicleTestResultsHistory()">
+      <ng-container>
+        <h3>
                     <span *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType, 'trl');
                                 else showVehicleTestHistoryTitle">
                         Trailer
                     </span>
-                    <ng-template #showVehicleTestHistoryTitle>
-                        Vehicle
-                    </ng-template>
-                    test history
-                </h3>
-            </ng-container>
-        </button>
-        <button ion-item padding-left 
-            *ngIf="!commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.HGV)" 
+          <ng-template #showVehicleTestHistoryTitle>
+            Vehicle
+          </ng-template>
+          test history
+        </h3>
+      </ng-container>
+    </button>
+    <button ion-item padding-left
+            *ngIf="!commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.HGV)"
             (click)="showMoreDetails('VehicleBrakesPage')">
-            <h3>Brakes</h3>
-        </button>
-        <button ion-item padding-left (click)="showMoreDetails('VehicleWeightsPage')">
-            <h3>Weights</h3>
-        </button>
-        <button ion-item padding-left (click)="showMoreDetails('VehicleTyresPage')">
-            <h3>Tyres</h3>
-        </button>
-        <button ion-item padding-left (click)="showMoreDetails('VehicleAdditionalPage')">
-            <h3>Additional vehicle details</h3>
-        </button>
-    </ion-list>
+      <h3>Brakes</h3>
+    </button>
+    <button ion-item padding-left (click)="showMoreDetails('VehicleWeightsPage')">
+      <h3>Weights</h3>
+    </button>
+    <button ion-item padding-left (click)="showMoreDetails('VehicleTyresPage')">
+      <h3>Tyres</h3>
+    </button>
+    <button ion-item padding-left (click)="showMoreDetails('VehicleAdditionalPage')">
+      <h3>Additional vehicle details</h3>
+    </button>
+    <button ion-item padding-left
+            *ngIf="vehicleData.techRecord.adrDetails"
+            (click)="showMoreDetails('VehicleAdrDetailsPage')">
+      <h3>ADR details</h3>
+    </button>
+  </ion-list>
 
 </ion-content>
